Users Dashboar 100% complete

--- a/public/admin/templates/filterTable.html
+++ b/public/admin/templates/filterTable.html
@@ -109,7 +109,7 @@
                     <th>Email</th>
                     <th>Phone Number</th>
                     <th>Church</th>
-                    <th>Leaders Position</th>
+                    <th>Designation</th>
                     <th>Cell</th>
                     <th>Department</th>
                     <th>Date Registered</th>
