--- a/public/dashboard/style.css
+++ b/public/dashboard/style.css
@@ -34,6 +34,7 @@ body {
     flex-direction: column;
     text-align: center;
     background-color: #f9f9f9;
+    overflow: hidden;
     max-width: 100vw;
     min-height: 100vh;
     line-height: 1.6;
@@ -55,12 +56,13 @@ body .sub-body {
 .dashboard-sub-body > .vertical-navbar {
     width: 260px;
     position: absolute;
-    z-index: 16;
+    z-index: 20;
     left: 0;
     transition: left 0.5s ease;
     height: 100%;
     /* background-color: #f9f9f9; */
 }
+
 .vertical-navbar.active::before {
     content: '';
     position: absolute;
@@ -71,9 +73,10 @@ body .sub-body {
     background: #00000094;
     animation: fade 0.5s ease;
 }
+
 .dashboard-content-title button {
     display: none;        
-    width: 40px;
+    width: 28px;
     height: 35px;        
     border-radius: 10px;
     background: none;
@@ -83,9 +86,9 @@ body .sub-body {
     border: none;
     align-items: center;
     justify-content: center;
-    font-size: 2.4rem;
+    font-size: 2.3rem;
     letter-spacing: 0.1px;
-    padding: 0px 10px;
+    padding: 0px 5px;
 }
 
 .user-details .closeIcon {
@@ -102,10 +105,12 @@ body .sub-body {
 .nocssneeded {
     flex: 1;
     display: flex;
-    padding: 0px 0px 7% 0px ;
+    padding: 0px 0px 15% 0px;
     flex-direction: column;
+    overflow: hidden;
+    /* justify-content: space-evenly; */
+    gap: 2rem;
 }
-
 
 .user-details > .closeIcon:hover {
     background:#2c3e5011;
@@ -158,9 +163,6 @@ body .sub-body {
     height: 100%;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-between; */
-    /* justify-content: center;
-    align-self: center; */
     position: relative;
     z-index: 1;
 }
@@ -170,16 +172,16 @@ body .sub-body {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: flex-end;
-    padding: 0px 0px 20px 0px;
-    /* height: 150px; */
-    flex-basis: 150px;
+    justify-content: center;
+    padding: 3rem 0rem 1rem;
+    /* flex: 1; */
 }
 
 .user-details > .admin-profile-icon { /* Holds only the profile icon and welcome greeting */
     display: flex;
     align-items: center;
     flex-direction: row;
+    gap: 15px;
     justify-content: center;
     flex-wrap: wrap;
     padding: 0px 5px 0px 10px;
@@ -200,9 +202,10 @@ body .sub-body {
 
 .admin-profile-icon .userGreeting { /* welcome greeting */
     text-wrap: nowrap;
+    white-space: nowrap;
     text-transform: capitalize;
-    font-size: 1.1rem;
-    letter-spacing: normal;
+    font-size: 1rem;
+    letter-spacing: .0001px;
     color: var(--darker-blue);
     font-weight: 500;
     margin: 5px 0px 0px 0px;
@@ -214,7 +217,6 @@ hr {
 }
 
 .admin-profile-icon .greeting-user {  /* profile-icon */
-    margin-right: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -225,6 +227,8 @@ hr {
     height: 40px;
     border-radius: 50%;
 }
+
+
 
 .edit-profile {  /* button not in use for this page */
     position: relative;
@@ -255,10 +259,23 @@ hr {
     flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
+    overflow-x: auto;
     font-size: 1.15rem;
     color: var(--primary-text-color);
     text-shadow: 2px 1px 5px rgba(0, 0, 0, 0.089);
     padding: 0px 10px;
+    direction: rtl;
+}
+
+.navbar-list-items::-webkit-scrollbar {
+    display: none;
+}
+
+.left-dash-footer {
+    position: fixed;
+    bottom: 0;
+    background: #f9f9f9;
+    width: 250px;
 }
 
 .dashboard-links { /* ul tag holding all the list items (.navbar-list-items) */
@@ -273,6 +290,7 @@ hr {
     width: 100%;
     display: flex;
     text-align: left;
+    flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
     border-radius: 8px;
@@ -373,27 +391,16 @@ hr {
     width: 100%;
     background: var(--primary-color);
     color: #f9f9f99f;
-    box-shadow: 4px 2px 10px rgba(0, 0, 0, 0.219);
-    & {
-
-        @media (width<=985px) {
-            padding: 10px 20px;
-        }
-
-    }
+    /* box-shadow: 4px 2px 10px rgba(0, 0, 0, 0.2); */
 }
-@media (width < 768px) {
-    .dashboard-content-title {
-        padding: 10px 0px;
-    }
-}
+
 
 .dashboard-content-title h1 { /* selective styling for the h1 tag */
     letter-spacing: 2.5px;
 }
 
 .empty-div { /* invisible container pushing the elements under the dashboard-content title bar down */
-    height: 25%;
+    height: 15%;
 }
 
 .go-back { /* go back or home text styling */
@@ -430,6 +437,7 @@ hr {
     display: flex;
     flex-direction: column;
     text-align: left;
+    padding: var(--default-padding);
     /* font-size: 1.5rem; */
 }
 
@@ -491,21 +499,48 @@ hr {
     -webkit-animation: rotate-center 0.6s linear both infinite;
     animation: rotate-center 0.6s linear both infinite;
 }
-@media (width<= 985px) {
-    .overview-text {
-        margin-left: 20px;
-    }
+
+.prompt-popup {
+    width: 100%;  
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 50%;
+    bottom: 50%;    
+    z-index: 25;
+    padding: 10px 20px;
+    transform: translate(0%, -50%) ;
+    background: #3d3d3da1;
+    position: absolute;
+    animation: fade .2s ease-in;
 }
 
-@media (width <= 768px) {
-    .empty-div{ 
-        height: 30%;
-    }
-    .overview {
-        justify-content: center;
-        height: 100%;
-    }
+.Update-Popup {
+    height: 500px;
+    flex-basis: 600px;
+    overflow: hidden;
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 5px;
+    position: relative;
+    box-shadow: 3px 4px 5px 3px hsla(0, 0%, 0%, 0.2);
+    color: #141414;
+    background: #fff;
+    /* padding: 20px 30px 0px 30px; */
 }
+
+.Update-Popup-text-container {
+    display: flex;
+    width: 100%;
+    padding: 8px 17px 12px 30px;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.3rem;
+}
+
 
 #toastBox {
     position: absolute;
@@ -561,4 +596,32 @@ hr {
         width: 0;
     }
     
+}
+@media (width <= 768px) {
+    .empty-div{ 
+        height: 12%;
+    }
+    .overview {
+        justify-content: center;
+    }
+    .nocssneeded > .user-details { /* holds all the content in the first half of the vertical navbar */
+        flex:0;
+    }
+    .nocssneeded {
+        justify-content: space-evenly;
+    }
+    .greeting-user i {
+        font-size: 26px;
+    }
+    .greeting-user {
+        width: 45px !important;
+        height: 45px !important;
+    }
+    .navbar-list-items {
+        min-height: 100px;
+    }
+
+    .dashboard-content-title{
+        padding: 10px 0px;
+    }
 }
